fixing overflow for media query

--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -13,7 +13,7 @@
 
 #main .layer {
   position: absolute;
-  width: 100%;
+  width: auto;
   height: 100vh;
   overflow: hidden;
 }
