--- a/src/components/Resume/resume.css
+++ b/src/components/Resume/resume.css
@@ -270,7 +270,7 @@
 
     .resume-heading {
         margin-top: -10.5rem;
-        font-size: 4.3rem;
+        font-size: 3.9rem;
         margin-left: 3rem;
     }
 
@@ -279,9 +279,9 @@
     }
 
     .resume-subtitle {
-        width: 90%;
+        width: 80%;
         font-size: .9rem;
-        margin-top: 0;  
+        margin-top: 4rem;  
     }
 
     .resume-info {
